[gd_scene load_steps=35 format=3 uid="uid://c3tald8005x1g"]

[ext_resource type="Script" uid="uid://w6qs6l4x158f" path="res://Level 3/questions.gd" id="1_bbejs"]
[ext_resource type="Script" uid="uid://17tdikyvt5m1" path="res://Level 3/Background elements.gd" id="2_3nfuf"]
[ext_resource type="Texture2D" uid="uid://cyom6f2wa4v41" path="res://FIles From partners/THINK-TWICE_grafika/images/3_lygio_kalnas_5.png" id="3_5udp0"]
[ext_resource type="Texture2D" uid="uid://c3fq6obspcjke" path="res://FIles From partners/THINK-TWICE_grafika/images/3_lygio_kalnas_4.png" id="4_5x7ny"]
[ext_resource type="Texture2D" uid="uid://b11tubhq14khj" path="res://FIles From partners/THINK-TWICE_grafika/images/3_lygio_kalnas_2.png" id="5_hxjnu"]
[ext_resource type="Texture2D" uid="uid://bf8mjh571t5y3" path="res://FIles From partners/THINK-TWICE_grafika/images/3_lygio_kalnas_3.png" id="6_c8fqs"]
[ext_resource type="Texture2D" uid="uid://b8sboewcll82o" path="res://FIles From partners/THINK-TWICE_grafika/images/3_lygio_kalnas_1.png" id="7_51wd8"]
[ext_resource type="Texture2D" uid="uid://dg76yafxdd78k" path="res://FIles From partners/THINK-TWICE_grafika/images/3_lygio_virsaus_lapas_1.png" id="8_npv12"]
[ext_resource type="Texture2D" uid="uid://bjtf0wy67kcbk" path="res://FIles From partners/THINK-TWICE_grafika/images/3_lygio_virsaus_lapas_2.png" id="9_u8h3k"]
[ext_resource type="Texture2D" uid="uid://cs7kelh80jldg" path="res://FIles From partners/THINK-TWICE_grafika/images/3_lygio_virsaus_lapas_3.png" id="10_prc22"]
[ext_resource type="Texture2D" uid="uid://dqa53ft5on5tn" path="res://FIles From partners/THINK-TWICE_grafika/images/3_lygio_desines_lapas.png" id="11_ctjco"]
[ext_resource type="Texture2D" uid="uid://xiwllemnak7c" path="res://art/Main menu/EntranceAnimationItems/FOG.png" id="12_bml4g"]
[ext_resource type="Texture2D" uid="uid://fapbfisja0ly" path="res://FIles From partners/THINK-TWICE_grafika/images/Lygio_logo_kampe.png" id="12_orpv6"]
[ext_resource type="Theme" uid="uid://1vstrjh1n4gu" path="res://themes/question.tres" id="13_dsb2f"]
[ext_resource type="Theme" uid="uid://cr2p7s5fsjbu2" path="res://themes/buttons.tres" id="14_7xy0k"]
[ext_resource type="PackedScene" uid="uid://b0cb528la31xu" path="res://questions/questions.tscn" id="14_lqifn"]
[ext_resource type="Theme" uid="uid://jutv1ra4d3p8" path="res://themes/Score.tres" id="16_16sny"]
[ext_resource type="PackedScene" uid="uid://bdqrc1inbrtmj" path="res://feedback.tscn" id="16_h3rav"]
[ext_resource type="Script" uid="uid://521wcudrdf1g" path="res://script/ScoreLabel.gd" id="17_ngu1y"]
[ext_resource type="PackedScene" uid="uid://c241k753jrngv" path="res://Retry.tscn" id="19_h3rav"]
[ext_resource type="PackedScene" uid="uid://bqqqrprdfwnxo" path="res://Congrats.tscn" id="20_8r3i1"]
[ext_resource type="Image" uid="uid://ccphtmd581fmy" path="res://Badges/Level3.png" id="21_u8wof"]
[ext_resource type="Texture2D" uid="uid://cwlus1tqapfun" path="res://Gear/Gear White.png" id="25_u8wof"]
[ext_resource type="Texture2D" uid="uid://ho0jdxrjywk3" path="res://Gear/Gear Gray.png" id="26_h3rav"]
[ext_resource type="Script" uid="uid://35qjt21l01ha" path="res://script/Pause_menu.gd" id="28_bir16"]
[ext_resource type="ButtonGroup" uid="uid://bs3bg1i0ffgpy" path="res://Main menu/Language Selector.tres" id="28_h3rav"]
[ext_resource type="Script" uid="uid://xaaxvyg48bgv" path="res://Level 3/show_explainer.gd" id="29_ekxye"]
[ext_resource type="PackedScene" uid="uid://rnvtnxiykibe" path="res://Explainer.tscn" id="31_lowuu"]

[sub_resource type="Gradient" id="Gradient_u8wof"]
colors = PackedColorArray(1, 0.486275, 0.121569, 1, 0.929412, 0.0627451, 0.0313726, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m3tor"]
gradient = SubResource("Gradient_u8wof")
width = 960
height = 540
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_jc3l5"]

[sub_resource type="Animation" id="Animation_0te4k"]
resource_name = "Congrats_Entrance"
length = 2.0

[sub_resource type="Animation" id="Animation_ir3cd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Retry:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.647059)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Retry/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s2wa0"]
_data = {
&"Congrats_Entrance": SubResource("Animation_0te4k"),
&"RESET": SubResource("Animation_ir3cd")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Explainer" parent="." instance=ExtResource("31_lowuu")]
visible = false
top_level = true
layout_mode = 1
level = 3

[node name="Questions" type="Control" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bbejs")

[node name="Colored background" type="TextureRect" parent="Questions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("GradientTexture2D_m3tor")

[node name="Background elements" type="Control" parent="Questions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_3nfuf")

[node name="Mountains" type="Control" parent="Questions/Background elements"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mountain 1" type="TextureRect" parent="Questions/Background elements/Mountains"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -135.5
offset_right = 507.0
offset_bottom = 135.5
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_5udp0")

[node name="Mountain 2" type="TextureRect" parent="Questions/Background elements/Mountains"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1158.0
offset_top = -198.0
offset_bottom = 198.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(1158, 143)
texture = ExtResource("4_5x7ny")

[node name="Mountain 3" type="TextureRect" parent="Questions/Background elements/Mountains"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -520.0
offset_right = 960.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.55)
pivot_offset = Vector2(960, 536)
texture = ExtResource("5_hxjnu")

[node name="Mountain 4" type="TextureRect" parent="Questions/Background elements/Mountains"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -295.0
offset_right = 960.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.55)
pivot_offset = Vector2(960, 310)
texture = ExtResource("6_c8fqs")

[node name="Mountain 5" type="TextureRect" parent="Questions/Background elements/Mountains"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -419.0
offset_right = 960.0
offset_bottom = 15.0005
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.55)
pivot_offset = Vector2(960, 434)
texture = ExtResource("7_51wd8")

[node name="Trees" type="Control" parent="Questions/Background elements"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Tree 1" type="TextureRect" parent="Questions/Background elements/Trees"]
layout_mode = 1
offset_left = 234.0
offset_top = 162.0
offset_right = 517.0
offset_bottom = 466.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(-273.673, -324.578)
texture = ExtResource("8_npv12")

[node name="Tree 2" type="TextureRect" parent="Questions/Background elements/Trees"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 333.0
offset_top = 117.0
offset_right = 515.0
offset_bottom = 308.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(506, -234)
texture = ExtResource("9_u8h3k")

[node name="Tree 3" type="TextureRect" parent="Questions/Background elements/Trees"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 524.0
offset_top = 114.0
offset_right = 722.0
offset_bottom = 400.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(304.965, -228)
texture = ExtResource("10_prc22")

[node name="Tree 4" type="TextureRect" parent="Questions/Background elements/Trees"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 535.0
offset_top = 111.0
offset_right = 822.0
offset_bottom = 557.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(510, 0)
texture = ExtResource("11_ctjco")

[node name="Fog" type="TextureRect" parent="Questions"]
modulate = Color(1, 1, 1, 0.901961)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_bml4g")

[node name="Logo" type="TextureRect" parent="Questions"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = 97.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(120, 0)
texture = ExtResource("12_orpv6")

[node name="Questions" parent="Questions" node_paths=PackedStringArray("Feedback", "Score_label") instance=ExtResource("14_lqifn")]
layout_mode = 1
Feedback = NodePath("../Feedback")
Score_label = NodePath("../../ScoreContainer/ScoreLabel")

[node name="Feedback" parent="Questions" instance=ExtResource("16_h3rav")]
top_level = true
layout_mode = 1

[node name="ScoreContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_right = 52.0
offset_bottom = 40.0
grow_horizontal = 2
theme = ExtResource("16_16sny")

[node name="ScoreLabel" type="Label" parent="ScoreContainer"]
process_mode = 3
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = ExtResource("14_7xy0k")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0
"
label_settings = SubResource("LabelSettings_jc3l5")
script = ExtResource("17_ngu1y")

[node name="ShowExplainer" type="Button" parent="."]
layout_mode = 0
offset_left = 910.0
offset_top = 493.0
offset_right = 945.0
offset_bottom = 527.0
theme = ExtResource("13_dsb2f")
theme_override_font_sizes/font_size = 20
toggle_mode = true
button_group = ExtResource("28_h3rav")
text = "?"
script = ExtResource("29_ekxye")

[node name="Retry" parent="." instance=ExtResource("19_h3rav")]
layout_mode = 1
color = Color(0, 0, 0, 0.647059)

[node name="Congrats" parent="." instance=ExtResource("20_8r3i1")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
Badge = ExtResource("21_u8wof")
FileName = "Level 3 Badge.png"

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -30.0
offset_top = -30.0
offset_right = 98.0
offset_bottom = 98.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(64, 64)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("25_u8wof")
texture_pressed = ExtResource("26_h3rav")
texture_hover = ExtResource("26_h3rav")
texture_focused = ExtResource("26_h3rav")

[node name="Pause_menu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("28_bir16")
mainMenu = "res://Main menu/main menu.tscn"

[node name="ColorRect" type="ColorRect" parent="Pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.678431)

[node name="VBoxContainer" type="CenterContainer" parent="Pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="VBoxContainer" parent="Pause_menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("13_dsb2f")
theme_override_constants/separation = 18

[node name="ResumeButton" type="Button" parent="Pause_menu/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="Pause_menu/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="Pause_menu/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Main menu
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s2wa0")
}

[connection signal="pressed" from="ShowExplainer" to="ShowExplainer" method="_on_pressed"]
[connection signal="pressed" from="SettingsButton" to="Pause_menu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="Pause_menu/VBoxContainer/GridContainer/ResumeButton" to="Pause_menu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="Pause_menu/VBoxContainer/GridContainer/RestartButton" to="Pause_menu" method="_on_restart_button_pressed"]
[connection signal="pressed" from="Pause_menu/VBoxContainer/GridContainer/MainMenuButton" to="Pause_menu" method="_on_main_menu_button_pressed"]
